# avalanche_hazard_prediction_model

./: .gitignore  README.md  pyproject.toml
data/raw/: SnopwPackLocations.csv  SnowPackLocations_from_pro_files.csv  avalanche-record-CAIC20240113-15.csv  danger_rating.csv
output/: avalanche_day_predictions.csv
src/: __init__.py  config.py  dataset_utils.py  make_avalanche_event_training_dataset.py  make_prediction_dataset.py  plot_results.py  predict.py  run_pipeline.py  run_prediction.py  snowpack_reader.py  train_avalanche_event_model.py  train_avalanche_hazard_model.py
