[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "avalanche-hazard-forecasting"
version = "1.0.0"
authors = [
  { name="Your Name", email="you@example.com" },
]
description = "A comprehensive pipeline for avalanche hazard forecasting using machine learning."
readme = "README.md"
requires-python = ">=3.10"
license = { file="LICENSE" }
keywords = ["avalanche", "forecasting", "machine learning", "snowpack", "geospatial"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]

# Core dependencies required for the project to run
dependencies = [
    "bottleneck>=1.3.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "shap>=0.45.0",
    "xarray>=2023.6.0",
    "requests>=2.31.0",
    "tqdm>=4.66.0",
    "geopandas>=0.14.0",
    "imbalanced-learn>=0.12.0",
    "matplotlib>=3.10.5",
    "matplotlib>=3.10.5",
    "seaborn>=0.13.0",
    "cupy>=13.6.0",
    "folium>=0.20.0",
    "branca>=0.8.1",
    "shapely>=2.1.1",
]

[project.optional-dependencies]
# Dependencies for visualization and plotting
visualization = [
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "folium>=0.15.0",
    "branca>=0.7.0",
]
# Dependencies for running notebooks or interactive sessions
notebook = [
    "ipykernel>=6.29.0",
    "ipython>=8.21.0",
]
# Dependencies for GPU-accelerated computing
gpu = [
    "cupy-cuda12x>=12.0.0", # Or the specific CUDA version you use
]
# Dependencies for development (e.g., linters, formatters)
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]
